Got rid of all multiple choice atoms in tests